# spider-web

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  scrapy.cfg
docs/: pyproject-toml-guide.md  scrapy-cfg-guide.md  settings-guide.md  structure.md
spider_web/: celery_app.py  items.py  middlewares.py  pipelines.py  settings.py  tasks.py
spider_web/spiders/: dazn.py
